# Deep-Learning-Cloud-Run-Starter

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/: renovate.json
.github/workflows/: deploy.yml  publish.yml  pylint.yml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css  main.jsx
src/: CV-Sample.ipynb
