[tool.poetry]
name = "jetpack-ai-starter"
version = "0.1.0"
description = "Deploy Full-Stack ML Apps with Docker and Google Cloud Run"
authors = ["Atick Faisal <atickfaisal@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
tensorflow-cpu = "^2.14.0"
Pillow = "^10.1.0"
google-cloud-storage = "^2.12.0"
Flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
